2012-12-21  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclThreadInt.h: Add runtime detection of Tcl_AddErrorInfo
	* generic/*.c:	vs. Tcl_AppendObjToErrorInfo and Tcl_GetErrorLine vs.
	interp->errorLine. Replace Tcl_GetString to Tcl_GetStringFromObj
	everywhere. This will make it more likely that Thread will run
	in Tcl9 unmodified, no matter what API changes are made.

2012-12-16  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/*.c: Rename Tcl_Free -> ckfree and Tcl_Alloc -> ckalloc,
	which allows a debug build of Thread use the debug versions of
	those functions.

2012-12-13  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/threadCmd.c: Tcl_Free cannot be used directly as
	freeProc (will break in "novem"), so use a small wrapper.

2012-11-08  Don Porter  <dgp@users.sourceforge.net>

	*** 2.7.0 TAGGED FOR RELEASE (thread-2-7-0) ***

	* README: Update for stable release.

2012-11-14  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/threadCmd.c: Move back test for core threaded functionality
	* pkgIndex.tcl.in:     from pkgIndex.tcl to threadCmd.c, so it cannot
	be escaped any more.

2012-11-13  Joe Mistachkin  <joe@mistachkin.com>

	* generic/threadCmd.c: merge compileTipCheck to trunk. Additional
	functionality to switch off TIP 143/285 functionality for static
	builds.

2012-11-10 Zoran Vasiljevic <zv@archiware.com>

	* genric/threadCmd.c: fixed race condition on
	thread-local storage in ThreadCancel().

2012-11-10 Zoran Vasiljevic <zv@archiware.com>

	*** Merged "thread-2-7for84+" branch ***

2012-11-08  Don Porter  <dgp@users.sourceforge.net>

	* configure.in:		Bump to version 2.7.0
	* lib/ttrace.tcl:
	* win/pkg.vc:

2012-09-13 Zoran Vasiljevic <zv@archiware.com>

	*** 2.7b1 TAGGED FOR RELEASE (thread-2-7-b1) ***

	* doc/html/tpool.html
	* doc/man/tpool.n
	* doc/tpool.man: fixed "tpool::create -idletime" description
	[Tcl Bug 3534442]

	* generic/threadSpCmd.h
	* generic/threadSvCmd.h: removed some unused structure members